# semtax

./: .gitattributes  .gitignore  README.md  pyproject.toml  semtax_plan.md
.github/workflows/: ci.yml  publish.yml
src/semtax/: __init__.py  _ambiguity.py  _api.py  _classifier.py  _embeddings.py  _result.py  _taxonomy.py  _telemetry.py
src/semtax/data/: unspsc-english-v260801.1.csv
tests/: conftest.py  test_ambiguity.py  test_api.py  test_classifier.py  test_embeddings.py  test_taxonomy.py
