[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semtax"
version = "0.1.0"
description = "Zero-shot hierarchical taxonomy classification using semantic embeddings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["taxonomy", "classification", "nlp", "embeddings", "unspsc", "procurement", "zero-shot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "posthog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semtax"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/semtax/data" = "semtax/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
